UPD: Initial Code

--- a/Number1.ipynb
+++ b/Number1.ipynb
@@ -8,7 +8,8 @@
     "# UTS Deep Learning Number 1\n",
     "Name: Austin Kane\\\n",
     "NIM: 270222932\\\n",
-    "Dataset: [Dataset B](https://drive.google.com/drive/folders/1pThuel6dU23CLRseKzymT4oNDUECq_c6)"
+    "Dataset: [Dataset B](https://drive.google.com/drive/folders/1pThuel6dU23CLRseKzymT4oNDUECq_c6)\\\n",
+    "Video Link: [Video1]()"
    ]
   },
   {
@@ -23,9 +24,7 @@
     "2. [LO2, LO3, & LO4 – 10 Poin] Buatlah **2 baseline model** dengan jumlah layer dan neuron yang berbeda. 1 model berupa **Sequential Model** dan 1 lagi berupa **Functional Model**. Semua hidden layer wajib menggunakan activation function bernama ReLU dan memiliki jumlah neuron minimal 2 kali lipat dari dimensi input data. Kedua model harus memiliki minimal 2 hidden layer. Lakukan training pada kedua model tersebut dengan minimal 10 epoch.\n",
     "3. [LO2, LO3, & LO4 – 10 Poin] Lakukan **modifikasi pada kedua model anda**. Anda dapat mengubah jumlah neuron dan layer ataupun activation function dari hidden layer. Anda juga dapat melakukan **hyperparameter fine-tuning** pada model anda. Lakukan training pada 2 modifikasi model anda.\n",
     "4. [LO2, LO3, & LO4 – 10 Poin] Lakukan **evaluasi pada 4 model** yang sudah anda buat menggunakan **minimal 3 evaluation metrics**, lalu bandingkan, analisis, dan simpulkan hasilnya.\n",
-    "5. [LO1, LO2 – 5 Poin] Buatlah **video presentasi** yang menjelaskan langkah-langkah pengerjaan anda serta hasil analisis anda dengan durasi maksimal 15 menit.\n",
-    "\n",
-    "\n"
+    "5. [LO1, LO2 – 5 Poin] Buatlah **video presentasi** yang menjelaskan langkah-langkah pengerjaan anda serta hasil analisis anda dengan durasi maksimal 15 menit."
    ]
   },
   {
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e76c0e70",
    "metadata": {},
    "outputs": [],
@@ -58,24 +57,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "52afd333",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "read_csv() missing 1 required positional argument: 'filepath_or_buffer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: read_csv() missing 1 required positional argument: 'filepath_or_buffer'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>day</th>\n",
+       "      <th>Team Code</th>\n",
+       "      <th>smv</th>\n",
+       "      <th>wip</th>\n",
+       "      <th>over_time</th>\n",
+       "      <th>incentive</th>\n",
+       "      <th>idle_time</th>\n",
+       "      <th>idle_men</th>\n",
+       "      <th>no_of_style_change</th>\n",
+       "      <th>no_of_workers</th>\n",
+       "      <th>productivity_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>8</td>\n",
+       "      <td>26.16</td>\n",
+       "      <td>1108.0</td>\n",
+       "      <td>7080</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>94.073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>88.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>3660</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>80.057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>3660</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>80.057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25.90</td>\n",
+       "      <td>1170.0</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>80.038</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       date   quarter       day  Team Code    smv     wip  over_time  \\\n",
+       "0  1/1/2015  Quarter1  Thursday          8  26.16  1108.0       7080   \n",
+       "1  1/1/2015  Quarter1  Thursday          1   3.94     NaN        960   \n",
+       "2  1/1/2015  Quarter1  Thursday         11  11.41   968.0       3660   \n",
+       "3  1/1/2015  Quarter1  Thursday         12  11.41   968.0       3660   \n",
+       "4  1/1/2015  Quarter1  Thursday          6  25.90  1170.0       1920   \n",
+       "\n",
+       "   incentive  idle_time  idle_men  no_of_style_change  no_of_workers  \\\n",
+       "0         98        0.0         0                   0           59.0   \n",
+       "1          0        0.0         0                   0            8.0   \n",
+       "2         50        0.0         0                   0           30.5   \n",
+       "3         50        0.0         0                   0           30.5   \n",
+       "4         50        0.0         0                   0           56.0   \n",
+       "\n",
+       "   productivity_score  \n",
+       "0              94.073  \n",
+       "1              88.650  \n",
+       "2              80.057  \n",
+       "3              80.057  \n",
+       "4              80.038  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv()"
+    "data = pd.read_parquet(\"Data/01/dataset_1B.parquet\")\n",
+    "data.head()"
    ]
   },
   {
