--- a/Number2.ipynb
+++ b/Number2.ipynb
@@ -5,10 +5,11 @@
    "id": "90a1459b",
    "metadata": {},
    "source": [
-    "# UTS Deep Learning Number 1\n",
+    "# UTS Deep Learning Number 2\n",
     "Name: Austin Kane\\\n",
     "NIM: 270222932\\\n",
-    "Dataset: [Dataset B](https://drive.google.com/drive/folders/1pThuel6dU23CLRseKzymT4oNDUECq_c6)"
+    "Dataset: [Dataset B](https://drive.google.com/drive/folders/1pThuel6dU23CLRseKzymT4oNDUECq_c6)\\\n",
+    "Video Link: [Video2]()"
    ]
   },
   {
@@ -16,16 +17,14 @@
    "id": "63e0932b",
    "metadata": {},
    "source": [
-    "# 1. Artificial Neural Network\n",
-    "Anda adalah seorang Data Scientist di perusahaan komersil. Tugas kalian adalah membuat model **Artificial Neural Network (ANN)** yang dapat menilai produktivitas setiap team dari perusahaan produsen pakaian.\n",
+    "# 2. Convolutional Neural Network\n",
+    "Anda adalah seorang Data Scientist di bidang medis. Anda mendapatkan tugas untuk mengembangkan model **Convolutional Neural Network (CNN)** untuk melakukan klasifikasi gambar/citra medis Osteoarthritis\n",
     "Download dataset yang telah disediakan dan kerjakan task berikut ini.\n",
-    "1. [LO2 – 5 Poin] Lakukan **Exploratory Data Analysis (EDA)** untuk memahami kondisi data. Jelaskan semua masalah yang anda temukan pada dataset anda. Lakukan pre-processing pada dataset anda sesuai dengan hasil EDA anda, termasuk memisahkan dataset anda menjadi train, val, dan test dengan proporsi 70:10:20.\n",
-    "2. [LO2, LO3, & LO4 – 10 Poin] Buatlah **2 baseline model** dengan jumlah layer dan neuron yang berbeda. 1 model berupa **Sequential Model** dan 1 lagi berupa **Functional Model**. Semua hidden layer wajib menggunakan activation function bernama ReLU dan memiliki jumlah neuron minimal 2 kali lipat dari dimensi input data. Kedua model harus memiliki minimal 2 hidden layer. Lakukan training pada kedua model tersebut dengan minimal 10 epoch.\n",
-    "3. [LO2, LO3, & LO4 – 10 Poin] Lakukan **modifikasi pada kedua model anda**. Anda dapat mengubah jumlah neuron dan layer ataupun activation function dari hidden layer. Anda juga dapat melakukan **hyperparameter fine-tuning** pada model anda. Lakukan training pada 2 modifikasi model anda.\n",
-    "4. [LO2, LO3, & LO4 – 10 Poin] Lakukan **evaluasi pada 4 model** yang sudah anda buat menggunakan **minimal 3 evaluation metrics**, lalu bandingkan, analisis, dan simpulkan hasilnya.\n",
-    "5. [LO1, LO2 – 5 Poin] Buatlah **video presentasi** yang menjelaskan langkah-langkah pengerjaan anda serta hasil analisis anda dengan durasi maksimal 15 menit.\n",
-    "\n",
-    "\n"
+    "1. Lakukan **Exploratory Data Analysis** untuk memeriksa kondisi data yang anda miliki, seperti histogram warna untuk setiap kategori, aspect ratio, resolution, dan variability (lighting, angle, occlusions, dan sebagainya). Lalu pisahkan data anda menjadi train, validation, dan test dengan proporsi data validation sebesar 15% dari data train! Lakukan pre-processing pada data anda.\n",
+    "2. [LO2, LO3, & LO4 – 10 Poin] Buatlah sebuah **model CNN dengan arsitektur AlexNet secara manual** (tidak menggunakan pre-trained model dari Keras) seperti pada gambar di samping dan adaptasikan output layer pada gambar sesuai dengan dataset anda. Model ini akan disebut sebagai **Baseline Model**. Lakukan training pada model anda dengan minimal 10 epoch.\n",
+    "3. [LO2, LO3, & LO4 – 15 Poin] **Modifikasi arsitektur AlexNet** yang sudah dibuat. Anda bisa menambahkan DropOut, Batch Normalization, dan sebagainya. Anda juga bisa mengganti modelnya dengan arsitektur CNN lain seperti DenseNet, EfficientNet, dan sebagainya. Jelaskan alasan modifikasi anda dan lakukan training (minimal 10 epoch) serta fine-tuning untuk hyperparameter pada model ini.\n",
+    "4. [LO2, LO3, & LO4 – 10 Poin] Lakukan **evaluasi performa model** anda pada data test dengan menggunakan **minimal 3 evaluation metrics**. Analisis, jelaskan, dan simpulkan hasilnya.\n",
+    "5. [LO1, LO2 – 5 Points] Buatlah **video presentasi** yang menjelaskan langkah-langkah pengerjaan anda serta hasil analisis anda dengan durasi maksimal 15 menit."
    ]
   },
   {
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e76c0e70",
    "metadata": {},
    "outputs": [],
@@ -58,25 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "52afd333",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "read_csv() missing 1 required positional argument: 'filepath_or_buffer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: read_csv() missing 1 required positional argument: 'filepath_or_buffer'"
-     ]
-    }
-   ],
-   "source": [
-    "pd.read_csv()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
