--- a/Number1.ipynb
+++ b/Number1.ipynb
@@ -752,7 +752,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "UTSDL",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
