UPD: Data Cleaning

--- a/Number1.ipynb
+++ b/Number1.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 308,
    "id": "e76c0e70",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 309,
    "id": "52afd333",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "[1197 rows x 13 columns]"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 310,
    "id": "a64ad6a3",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "productivity_score      0        0.00"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 311,
    "id": "1fb993d8",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 312,
    "id": "35198dc7",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 313,
    "id": "838b4e1a",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 314,
    "id": "1b59a6b2",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 315,
    "id": "8ff599c3",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 316,
    "id": "c8c486cc",
    "metadata": {},
    "outputs": [],
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 317,
    "id": "37180bfa",
    "metadata": {},
    "outputs": [],
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 318,
    "id": "868f9e41",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 319,
    "id": "fe706481",
    "metadata": {},
    "outputs": [],
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 320,
    "id": "0d8a4ada",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 321,
    "id": "a968e4dd",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
        "572              70.040  "
       ]
      },
-     "execution_count": 295,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 322,
    "id": "96931d49",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1251,7 @@
        "146              34.995  "
       ]
      },
-     "execution_count": 296,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 323,
    "id": "de5df106",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
        "1149              26.406  "
       ]
      },
-     "execution_count": 297,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 324,
    "id": "963a7ae1",
    "metadata": {},
    "outputs": [
@@ -1661,7 +1661,7 @@
        "654              36.532  "
       ]
      },
-     "execution_count": 298,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 325,
    "id": "c5a50edb",
    "metadata": {},
    "outputs": [
@@ -2075,7 +2075,7 @@
        "1085              36.605  "
       ]
      },
-     "execution_count": 299,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2102,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 326,
    "id": "93aeaec0",
    "metadata": {},
    "outputs": [
@@ -2250,7 +2250,7 @@
        "502              90.013  "
       ]
      },
-     "execution_count": 300,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 327,
    "id": "e0af153c",
    "metadata": {},
    "outputs": [
@@ -2335,7 +2335,7 @@
        "4  Quarter5   29 Jan   31 Jan"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 328,
    "id": "f99e595a",
    "metadata": {},
    "outputs": [
@@ -2525,7 +2525,7 @@
        "697              89.998  "
       ]
      },
-     "execution_count": 302,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2544,7 +2544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 329,
    "id": "a8d31aed",
    "metadata": {},
    "outputs": [
@@ -2616,7 +2616,7 @@
        "1120              -100.0  "
       ]
      },
-     "execution_count": 303,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2670,6 +2670,351 @@
    "metadata": {},
    "source": [
     "## Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e5815e8",
+   "metadata": {},
+   "source": [
+    "### To-do:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a8bee7",
+   "metadata": {},
+   "source": [
+    "- Missing Value Handling (wip)\n",
+    "- Convert wip and no_of_workers to int\n",
+    "- Convert Quarter 5 to Quarter 1\n",
+    "- Convert overtime to hours\n",
+    "- Drop extreme outliers on wip, overtime, incentive, idle_time, and idle_men\n",
+    "- Drop negative values on no_of_workers and productivity_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "165853f9",
+   "metadata": {},
+   "source": [
+    "### Handle Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "id": "bf12208d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>day</th>\n",
+       "      <th>Team Code</th>\n",
+       "      <th>smv</th>\n",
+       "      <th>wip</th>\n",
+       "      <th>over_time</th>\n",
+       "      <th>incentive</th>\n",
+       "      <th>idle_time</th>\n",
+       "      <th>idle_men</th>\n",
+       "      <th>no_of_style_change</th>\n",
+       "      <th>no_of_workers</th>\n",
+       "      <th>productivity_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>8</td>\n",
+       "      <td>26.16</td>\n",
+       "      <td>1108.0</td>\n",
+       "      <td>7080</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>94.073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>88.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>3660</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>80.057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>3660</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>80.057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25.90</td>\n",
+       "      <td>1170.0</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>80.038</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date   quarter       day Team Code    smv     wip  over_time  \\\n",
+       "0 2015-01-01  Quarter1  Thursday         8  26.16  1108.0       7080   \n",
+       "1 2015-01-01  Quarter1  Thursday         1   3.94     0.0        960   \n",
+       "2 2015-01-01  Quarter1  Thursday        11  11.41   968.0       3660   \n",
+       "3 2015-01-01  Quarter1  Thursday        12  11.41   968.0       3660   \n",
+       "4 2015-01-01  Quarter1  Thursday         6  25.90  1170.0       1920   \n",
+       "\n",
+       "   incentive  idle_time  idle_men  no_of_style_change  no_of_workers  \\\n",
+       "0         98        0.0         0                   0           59.0   \n",
+       "1          0        0.0         0                   0            8.0   \n",
+       "2         50        0.0         0                   0           30.5   \n",
+       "3         50        0.0         0                   0           30.5   \n",
+       "4         50        0.0         0                   0           56.0   \n",
+       "\n",
+       "   productivity_score  \n",
+       "0              94.073  \n",
+       "1              88.650  \n",
+       "2              80.057  \n",
+       "3              80.057  \n",
+       "4              80.038  "
+      ]
+     },
+     "execution_count": 330,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"wip\"] = data[\"wip\"].fillna(0)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a23666a",
+   "metadata": {},
+   "source": [
+    "### Convert Float to Int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "id": "1775ab8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1197 entries, 0 to 1196\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   date                1197 non-null   datetime64[ns]\n",
+      " 1   quarter             1197 non-null   object        \n",
+      " 2   day                 1197 non-null   object        \n",
+      " 3   Team Code           1197 non-null   category      \n",
+      " 4   smv                 1197 non-null   float64       \n",
+      " 5   wip                 1197 non-null   int64         \n",
+      " 6   over_time           1197 non-null   int64         \n",
+      " 7   incentive           1197 non-null   int64         \n",
+      " 8   idle_time           1197 non-null   float64       \n",
+      " 9   idle_men            1197 non-null   int64         \n",
+      " 10  no_of_style_change  1197 non-null   int64         \n",
+      " 11  no_of_workers       1197 non-null   int64         \n",
+      " 12  productivity_score  1197 non-null   float64       \n",
+      "dtypes: category(1), datetime64[ns](1), float64(3), int64(6), object(2)\n",
+      "memory usage: 113.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data[\"wip\"] = data[\"wip\"].astype(int)\n",
+    "data[\"no_of_workers\"] = data[\"no_of_workers\"].astype(int)\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "551435c8",
+   "metadata": {},
+   "source": [
+    "### Convert Quarter5 to Quarter1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "id": "21aae24d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Quarter1', 'Quarter2', 'Quarter3', 'Quarter4'], dtype=object)"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"quarter\"] = data[\"quarter\"].replace(\"Quarter5\", \"Quarter1\")\n",
+    "data[\"quarter\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11a14c31",
+   "metadata": {},
+   "source": [
+    "### Converting time columns from minutes to hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "id": "b3d2b6a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Step</th>\n",
+       "      <th>Min Value</th>\n",
+       "      <th>Max Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>before</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25920.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>after</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>432.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Step  Min Value  Max Value\n",
+       "0  before        0.0    25920.0\n",
+       "1   after        0.0      432.0"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overtime = []\n",
+    "\n",
+    "overtime.append({\"Step\":\"before\", \"Min Value\":data['over_time'].min(), \"Max Value\": data['over_time'].max()})\n",
+    "data['over_time'] = data['over_time']/60\n",
+    "overtime.append({\"Step\":\"after\", \"Min Value\":data['over_time'].min(), \"Max Value\": data['over_time'].max()})\n",
+    "\n",
+    "overtime_df = pd.DataFrame(overtime)\n",
+    "overtime_df"
    ]
   },
   {
