--- a/Number1_ProductivityPrediction.ipynb
+++ b/Number1_ProductivityPrediction.ipynb
@@ -74,9 +74,7 @@
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import RobustScaler\n",
-    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
-    "\n",
-    "#!pip install pyarrow and fastparquet"
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error"
    ]
   },
   {
