UPD: model done

--- a/Number2_OsteoarthritisClassification.ipynb
+++ b/Number2_OsteoarthritisClassification.ipynb
@@ -66,7 +66,7 @@
    "id": "05e5f910",
    "metadata": {},
    "source": [
-    "## Read the Data"
+    "## Explaratory Data Analysis (EDA)"
    ]
   },
   {
@@ -175,6 +175,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dc29fb4",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "52afd333",
@@ -187,26 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "276897a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_shape = (224, 224, 3)\n",
     "batch_size = 32\n",
-    "num_classes = len(os.listdir(train_dir))\n",
-    "num_classes"
+    "num_classes = len(os.listdir(train_dir))"
    ]
   },
   {
@@ -260,28 +256,6 @@
     "    class_mode='categorical',\n",
     "    subset='validation'\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "2cb9aa8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape: (224, 224, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "img = plt.imread(\"data/02/train/Doubtful/1_Doubtful_1.png\")\n",
-    "print(\"Shape:\", img.shape)"
    ]
   },
   {
@@ -733,14 +707,6 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=class_labels)\n",
     "disp.plot(xticks_rotation='vertical')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7e420888",
-   "metadata": {},
-   "source": [
-    "## Explaratory Data Analysis (EDA)"
    ]
   },
   {
