--- a/Number2_OsteoarthritisClassification.ipynb
+++ b/Number2_OsteoarthritisClassification.ipynb
@@ -790,45 +790,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "3fcd6a22",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Austin\\anaconda3\\envs\\utsdl2\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-      "  self._warn_if_super_not_called()\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 89ms/step - accuracy: 0.1950 - loss: 1.6985\n",
+      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 94ms/step - accuracy: 0.1971 - loss: 1.6101\n",
       "Test Accuracy: 0.20\n",
-      "Test Loss: 1.69\n",
-      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 97ms/step\n",
+      "Test Loss: 1.61\n",
+      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 91ms/step\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.20      1.00      0.33       117\n",
+      "           0       0.21      0.42      0.28       117\n",
       "           1       0.00      0.00      0.00       117\n",
       "           2       0.00      0.00      0.00       117\n",
-      "           3       0.00      0.00      0.00       118\n",
+      "           3       0.19      0.57      0.29       118\n",
       "           4       0.00      0.00      0.00       117\n",
       "\n",
       "    accuracy                           0.20       586\n",
-      "   macro avg       0.04      0.20      0.07       586\n",
-      "weighted avg       0.04      0.20      0.07       586\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "[[117   0   0   0   0]\n",
-      " [117   0   0   0   0]\n",
-      " [117   0   0   0   0]\n",
-      " [118   0   0   0   0]\n",
-      " [117   0   0   0   0]]\n"
+      "   macro avg       0.08      0.20      0.11       586\n",
+      "weighted avg       0.08      0.20      0.11       586\n",
+      "\n"
      ]
     },
     {
@@ -856,10 +842,7 @@
     "y_pred_classes = np.argmax(y_pred, axis=1)\n",
     "\n",
     "print(\"Classification Report:\")\n",
-    "print(classification_report(y_true, y_pred_classes))\n",
-    "\n",
-    "print(\"Confusion Matrix:\")\n",
-    "print(confusion_matrix(y_true, y_pred_classes))"
+    "print(classification_report(y_true, y_pred_classes))"
    ]
   },
   {
@@ -909,45 +892,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "0ae2cba8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Austin\\anaconda3\\envs\\utsdl2\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-      "  self._warn_if_super_not_called()\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 85ms/step - accuracy: 0.2617 - loss: 1.6091\n",
-      "Test Accuracy: 0.23\n",
+      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 85ms/step - accuracy: 0.2009 - loss: 1.6091\n",
+      "Test Accuracy: 0.20\n",
       "Test Loss: 1.61\n",
-      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 86ms/step\n",
+      "\u001b[1m19/19\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 84ms/step\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.00      0.00      0.00       117\n",
+      "           0       0.20      1.00      0.33       117\n",
       "           1       0.00      0.00      0.00       117\n",
-      "           2       0.20      0.47      0.28       117\n",
+      "           2       0.00      0.00      0.00       117\n",
       "           3       0.00      0.00      0.00       118\n",
-      "           4       0.18      0.47      0.26       117\n",
+      "           4       0.00      0.00      0.00       117\n",
       "\n",
-      "    accuracy                           0.19       586\n",
-      "   macro avg       0.08      0.19      0.11       586\n",
-      "weighted avg       0.08      0.19      0.11       586\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "[[ 0  0 51  0 66]\n",
-      " [ 0  0 47  0 70]\n",
-      " [ 0  0 55  0 62]\n",
-      " [ 0  0 58  0 60]\n",
-      " [ 0  0 62  0 55]]\n"
+      "    accuracy                           0.20       586\n",
+      "   macro avg       0.04      0.20      0.07       586\n",
+      "weighted avg       0.04      0.20      0.07       586\n",
+      "\n"
      ]
     },
     {
@@ -975,10 +944,7 @@
     "y_pred_classes = np.argmax(y_pred, axis=1)\n",
     "\n",
     "print(\"Classification Report:\")\n",
-    "print(classification_report(y_true, y_pred_classes))\n",
-    "\n",
-    "print(\"Confusion Matrix:\")\n",
-    "print(confusion_matrix(y_true, y_pred_classes))"
+    "print(classification_report(y_true, y_pred_classes))"
    ]
   },
   {
